--- a/css/form.css
+++ b/css/form.css
@@ -15,9 +15,9 @@ form > .form-row:last-of-type {
 form > .form-row > label {
     display: inline-block;
     width: 100%;
-    font-size: 17px;
-    color: #777;
     margin-bottom: 5px;
+    font-size: 15px;
+    color: #777;
     text-transform: uppercase;
 }
 
@@ -37,15 +37,27 @@ form >.form-row > button {
     padding: 5px;
     padding-left: 30px;
     padding-right: 30px;
-    border-radius: 20px;
+    border-radius: 18px;
     background: #2348d4;
     background: linear-gradient(53deg, #2348d4, #0265de 100%);
     color: #fff;
     border: none;
 }
 
-form >.form-row > span {
+form > .form-row > span {
+    display: inline-block;
+    line-height: 26px;
+    padding: 5px;
+    margin-left: 5px;
+    font-size: 17px;
 }
 
-form >.form-row > a {
+form > .form-row > a {
+    display: inline-block;
+    line-height: 26px;
+    padding: 5px;
+    text-decoration: none;
+    color: #2348d4;
+    font-weight: bold;
+    font-size: 17px;
 }
