--- a/css/form.css
+++ b/css/form.css
@@ -30,6 +30,10 @@ form > .form-row > input {
     border-bottom: 1px solid #ccc;
 }
 
+form > .form-row > input:focus-visible {
+    outline: 2px solid #777;
+}
+
 form >.form-row > button {
     font-size: 20px;
     line-height: 26px;
@@ -42,6 +46,13 @@ form >.form-row > button {
     background: linear-gradient(53deg, #2348d4, #0265de 100%);
     color: #fff;
     border: none;
+}
+
+
+form >.form-row > button:hover {
+    cursor: pointer;
+    background: #2348d4;
+    background: linear-gradient(53deg, #0265de, #2348d4 100%);
 }
 
 form > .form-row > span {
@@ -60,4 +71,9 @@ form > .form-row > a {
     color: #2348d4;
     font-weight: bold;
     font-size: 17px;
+}
+
+form > .form-row > a:hover {
+    text-decoration: underline;
+    
 }
