--- a/css/main.css
+++ b/css/main.css
@@ -38,28 +38,16 @@ h1 {
     float: left;
     padding: 60px;
     background-color: #fff;
+    position: relative;
 }
 
 .close {
+    height: 60px;
+    width: 60px;
+    text-align: center;
+    line-height: 60px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
-form {
-}
-
-form >.form-row > {
-}
-
-form >.form-row > label {
-}
-
-form >.form-row > input {
-}
-
-form >.form-row > button {
-}
-
-form >.form-row > span {
-}
-
-form >.form-row > a {
-}
