--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,30 @@
 body {   
     background-color: #44b2c8;
+    
+}
+
+.background {
+    display: inline-block;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/day1dr.jpg) ;
+    background-size: cover;
+    background-position: center;
+    filter: blur(25px);
 }
 
 .container {
     display: inline-block;
     width: 800px;
-    margin-top: 150px;
-    margin-left: calc(50% - 400px);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
 }
 
 .left-column {
     width: 40%;
-    float: left;
     padding: 40px;
     padding-bottom: 20px;
     background-color: #3f52b2;
@@ -19,12 +32,19 @@ body {
     background-size: cover;
     background-position: center;
     color: #fff;
+    position: absolute;
+    top: 30px;
+    bottom: 30px;
 }
 
 h1 {
 }
 
 .bottom-texts {
+    position: absolute;
+    bottom: 20px;
+    left: 40px;
+    right: 40px;
 }
 
 .bottom-texts > a {
@@ -35,7 +55,7 @@ h1 {
 .right-column {
     
     width: 60%;
-    float: left;
+    float: right;
     padding: 60px;
     background-color: #fff;
     position: relative;
