--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {   
-    background-color: #44b2c8;
+    background-color: #3f52b2;
+    background: linear-gradient(203deg, #0195b5, #671c80 100%);
     
 }
 
